constructing my app (my strcuture )
1. adding carousel.
2.adding card.
3.adding some css and html more

--- a/src/app/main.html
+++ b/src/app/main.html
@@ -2,7 +2,7 @@
   <fountain-header></fountain-header>
   <main class="main">
     <!--<fountain-title></fountain-title>-->
-    <fountain-techs></fountain-techs>
+    <fountain-home></fountain-home>
   </main>
   <!--<fountain-footer></fountain-footer>-->
 </div>
