--- a/src/app/shared/header/header.html
+++ b/src/app/shared/header/header.html
@@ -1,6 +1,6 @@
 <header class="header">
     <nav class="navbar navbar-expand-lg navbar-light ">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">L A B</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
