--- a/src/app/shared/header/header.scss
+++ b/src/app/shared/header/header.scss
@@ -2,6 +2,10 @@
 .header {
   nav {
     background-color: #3c4b55;
+    .navbar-brand {
+      color: #ffff00;
+      font-size: 32px;
+    }
     li.nav-item {
       a.nav-link {
         color: #ffffff;
