--- a/src/app/modules/home/components/card/card.scss
+++ b/src/app/modules/home/components/card/card.scss
@@ -1,7 +1,8 @@
 .card-container {
   position: absolute;
-  top: 70px;
-  left: 70px;
+  top: 7%;
+  left: 2%;
+  z-index: 2;
   .card {
     background-color: #3c4b55;
     border-radius: 0;
