--- a/src/app/modules/home/components/carousel/carousel.html
+++ b/src/app/modules/home/components/carousel/carousel.html
@@ -7,13 +7,13 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" ng-src="/assets/images/carousel/slide_1.png" alt="First slide">
+                <img class="d-block" ng-src="/assets/images/carousel/slide_1.png" alt="First slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" ng-src="/assets/images/carousel/slide_1.png" alt="Second slide">
+                <img class="d-block" ng-src="/assets/images/carousel/slide_1.png" alt="Second slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" ng-src="/assets/images/carousel/slide_1.png" alt="Third slide">
+                <img class="d-block" ng-src="/assets/images/carousel/slide_1.png" alt="Third slide">
             </div>
         </div>
     </div>
