--- a/src/app/modules/home/home.html
+++ b/src/app/modules/home/home.html
@@ -1,4 +1,5 @@
 <div class="home-container">
     <fountain-carousel></fountain-carousel>
     <fountain-card></fountain-card>
+    <fountain-album></fountain-album>
 </div>
