--- a/src/app/modules/home/components/carousel/carousel.scss
+++ b/src/app/modules/home/components/carousel/carousel.scss
@@ -4,7 +4,7 @@
     width: auto;
     height: 400px;
     @media screen and (min-width: 992px) {
-      height: 100%;
+      height: 400px;
       width: 100%;
     }
   }
