--- a/src/app/modules/home/home.html
+++ b/src/app/modules/home/home.html
@@ -2,4 +2,5 @@
     <fountain-carousel></fountain-carousel>
     <fountain-card></fountain-card>
     <fountain-album></fountain-album>
+    <fountain-form></fountain-form>
 </div>
