--- a/src/app/modules/home/components/form/form.html
+++ b/src/app/modules/home/components/form/form.html
@@ -10,7 +10,7 @@
                     <h4>Elegant Communication</h4>
                     <!-- Full NAME -->
                     <div class="form-group"
-                         ng-class="{ 'has-error' : userForm.fullName.$invalid && !userForm.fullName.$pristine }">
+                         ng-class="{ 'has-error' : userForm.fullName.$invalid && !userForm.fullName.$pristine}">
                         <input title="fullName" type="text" name="fullName" class="form-control"
                                ng-model="user.fullName" placeholder="full name*" required>
                         <p ng-show="userForm.fullName.$invalid && !userForm.fullName.$pristine" class="help-block">You
@@ -27,8 +27,9 @@
                             valid email.</p>
                     </div>
                     <!-- Strategy -->
-                    <div class="form-group">
-                        <select title="selectStrategy" class="form-control">
+                    <div class="form-group" ng-class="{ 'has-error' : userForm.strategy.$invalid }">
+
+                    <select title="selectStrategy" name="strategy" class="form-control" ng-model="user.strategy" required>
                             <option value="">digital strategy or transformation</option>
                             <option>1</option>
                             <option>2</option>
@@ -36,6 +37,7 @@
                             <option>4</option>
                             <option>5</option>
                         </select>
+                        <p class="help-inline" ng-show="userForm.strategy.$error.required">Required</p>
                     </div>
 
                     <button type="submit" class="btn btn-primary">CONTACT ME</button>
