--- a/src/app/modules/home/components/carousel/carousel.scss
+++ b/src/app/modules/home/components/carousel/carousel.scss
@@ -3,6 +3,7 @@
   img {
     width: auto;
     height: 400px;
+    max-width: none;
     @media screen and (min-width: 992px) {
       height: 400px;
       width: 100%;
